# QR

./: .gitignore  Cargo.toml  README.md  cdk.json  package-lock.json  package.json  samconfig.toml  template.yaml  tsconfig.json
.github/workflows/: ci.yml  ci_cd.yml  sam_pipeline.yml
crates/qr_aws/: Cargo.toml
crates/qr_aws/src/: api_gateway_to_sqs_function.rs  lib.rs  process_event.rs  sqs_to_sqs_function.rs
crates/qr_aws/src/functions/: mod.rs
crates/qr_aws/src/functions/api_gateway_to_sqs/: handle_event.rs  mod.rs
crates/qr_aws/src/functions/sqs_handler/: handle_message.rs  make_message_handler.rs  mod.rs
crates/qr_aws/src/functions/sqs_to_sqs/: handle_message.rs  mod.rs
crates/qr_aws/src/functions/web_socket_handler/: handle_event.rs  mod.rs
crates/qr_cli/: Cargo.toml
crates/qr_cli/src/: main.rs
crates/qr_cli/src/cli/: error_correction_level_cli.rs
crates/qr_encode_entry_function/: Cargo.toml
crates/qr_encode_entry_function/src/: encode_entry_event_processor.rs  event_handler.rs  lib.rs  main.rs  qr_encode_entry_function.rs  qr_encode_request.rs  qr_encode_response.rs
crates/qr_encode_result_function/: Cargo.toml
crates/qr_encode_result_function/src/: lib.rs  main.rs  message_handler.rs  message_handler_factory.rs  qr_encode_result_function.rs  qr_encode_result_input.rs  qr_encode_result_output.rs  qr_encode_result_request.rs  qr_encode_result_response.rs
crates/qr_encoder/: Cargo.toml
crates/qr_encoder/src/: alphanumeric_encoding_table.rs  data_analyzer.rs  data_encoding.rs  encoder.rs  error.rs  error_correction_level.rs  lib.rs  segment.rs  segment_encoder.rs  version.rs  version_analyzer.rs
crates/qr_encoder/src/data_encoders/: alphanumeric_data_encoder.rs  byte_data_encoder.rs  data_encoder.rs  data_encoder_factory.rs  mod.rs  numeric_data_encoder.rs
crates/qr_error/: Cargo.toml
crates/qr_error/src/: error.rs
crates/qr_result_web_socket_connect_function/: Cargo.toml
crates/qr_result_web_socket_connect_function/src/: event_handler.rs  lib.rs  main.rs
crates/qr_result_web_socket_disconnect_function/: Cargo.toml
crates/qr_result_web_socket_disconnect_function/src/: event_handler.rs  main.rs
crates/qr_result_web_socket_monitor_function/: Cargo.toml
crates/qr_result_web_socket_monitor_function/src/: event_handler.rs  lib.rs  main.rs  qr_result_monitor_request.rs
events/: event.json
infrastructure/lib/: dynamo_db_table_builder.ts  environment.ts  function_environment_builder.ts  index.ts  lambda_rest_api_builder.ts  qr_backend_stack.ts  queue_builder.ts  queue_factory.ts  rust_function_factory.ts  web_socket_api_builder.ts
src/: main.rs
src/cli/: error_correction_level_cli.rs  mod.rs
