[package]
name = "qr_encode_entry_function"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.0", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1.27.0"
aws_lambda_events = "0.15.1"
lambda_runtime = "0.11.2"
qr_encoder = { path = "../qr_encoder" }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1", features = ["macros"] }
