[package]
name = "qr_encode_entry_function"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
aws-config = { version = "1.5.0", features = ["behavior-version-latest"] }
aws_lambda_events = "0.15.1"
lambda_runtime = "0.11.2"
qr_aws = { path = "../qr_aws" }
qr_encoder = { path = "../qr_encoder" }
qr_encode_result_function = { path = "../qr_encode_result_function" }
qr_error = { path = "../qr_error" }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1", features = ["macros"] }
