[package]
name = "qr_encode_result_function"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.0", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1.27.0"
lambda_runtime = "0.11.2"
qr_error = { path = "../qr_error" }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1", features = ["macros"] }
