[package]
name = "qr_result_web_socket_monitor_function"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
aws-config = { version = "1.5.0", features = ["behavior-version-latest"] }
aws_lambda_events = "0.15.1"
aws-sdk-dynamodb = "1.34.0"
lambda_runtime = "0.11.2"
qr_aws = { path = "../qr_aws" }
qr_error = { path = "../qr_error" }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1", features = ["macros"] }
